--- a/Develop/package.json
+++ b/Develop/package.json
@@ -4,12 +4,14 @@
     "description": "CLI that generates README's",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "repository": {"url": "https://github.com/bkorbsquare/Module-9-Challenge"},
+    "repository": {
+        "url": "https://github.com/bkorbsquare/Module-9-Challenge"
+    },
     "author": "Brandon Krussow",
     "license": "ISC",
     "dependencies": {
-      "inquirer": "^6.3.1"
+        "inquirer": "^6.5.2"
     }
-  }
+}
